[package]
name = "erdos-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
indradb-lib = { version = "5.0", features = ["rocksdb-datastore"] }
uuid = { version = "1.3", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10"
reqwest = { version = "0.12.24", features = ["rustls-tls"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time"] }
quick-xml = { version = "0.38.3", features = ["encoding"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.4"
crossbeam-channel = "0.5"
serde-xml-rs = "0.6"

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.6"
