[package]
name = "erdos-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
indradb-lib = { version = "5.0", features = ["rocksdb-datastore"] }
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
quick-xml = { version = "0.38.3", features = ["encoding"] }
reqwest = { version = "0.12.24", features = ["rustls-tls"] }
tokio = { version = "1.41", features = ["full","rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
bytes = "1.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
urlencoding = "2.1"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
tempfile = "3.8"
wiremock = "0.6"
mockito = "1.2"
