[package]
name = "erdos-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
quick-xml = { version = "0.38.3", features = ["encoding"] }
reqwest = { version = "0.12.24", features = ["rustls-tls"] }
tokio = { version = "1.41", features = ["full","rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
bytes = "1.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
urlencoding = "2.1"
crossbeam-channel = "0.5"
async-trait = "0.1"
textdistance = "1.1.1"
tempfile = "3.8"
tokio-cron-scheduler = "0.15.1"
clap = { version = "4.5.53", features = ["derive"] }
bloomfilter = "3.0.1"
lru = "0.16.2"
anyhow = "1.0.100"
helix-db = { git = "https://github.com/HelixDB/helix-db", version = "1.2.4", features = ["full"] }
bumpalo = "3.19.1"
bincode = "1.3.3"
heed3 = "0.22.0"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
wiremock = "0.6"
mockito = "1.2"
